update before overhaul survey

--- a/src/Pages/Components/App.css
+++ b/src/Pages/Components/App.css
@@ -46,9 +46,9 @@
   height:auto ;
 }/*LeftBox*/
 
-#boxRight{
+/* #boxRight{
   height:auto;
-}/*RightBox*/
+}RightBox */
 
 #shitCard{
   /* height:68em; */
